<resources>
    <string name="app_name">Zwitter</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up_using_google">Sign Up Using Google</string>
    <string name="login">Login using Google</string>
    <string name="item_profile">Profile</string>
    <string name="tab_search">Search Results</string>
    <string name="tab_notif">Notifications</string>
    <string name="tab_msg">Messages</string>
    <string name="label_dot">•</string>
    <string name="label_sample_time">30m</string>
    <string name="label_sample_reply">50</string>
    <string name="label_send">SEND</string>
    <string name="hint_type_a_message">Type a message</string>
    <string name="label_placeholder_chat_message">How are you doing? This is a long message that should probably wrap.</string>
    <string name="hint_enter_bio">Enter bio</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_user_email">User Email</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    <string name="label_view_profile">View Profile</string>
    <string name="detail_error_message">Something went wrong!</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_follow">Follow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_logout">LogOut</string>
    <string name="error_message">Something went wrong!</string>
    <string name="hint_zweet">What\'s happening?</string>
    <string name="label_zweet">Zweet</string>
    <string name="toast_posting">Posting...</string>

    <string name="count_posts"> %1$s \n posts</string>
    <string name="count_followers"> %1$s \n followers</string>
    <string name="count_followings"> %1$s \n followings</string>
    <string name="label_following">Following</string>

</resources>
