<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.post.PostActivity">

    <Button
        android:id="@+id/action_post_message"
        android:enabled="false"
        style="@style/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/label_zweet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/action_cancel_post" />

    <Button
        android:id="@+id/action_cancel_post"
        style="@style/negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        android:text="@string/label_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/user_image"
        android:layout_width="@dimen/margin_48dp"
        android:layout_height="@dimen/margin_48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/margin_24dp"
        app:riv_oval="true"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/zweet_message"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/hint_zweet"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="@+id/user_image" />


</androidx.constraintlayout.widget.ConstraintLayout>