<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/content_main">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profImg"
        android:layout_width="@dimen/margin_48dp"
        android:layout_height="@dimen/margin_48dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:layout_marginStart="@dimen/margin_12dp"
        tools:src="@tools:sample/avatars"
        app:riv_corner_radius="@dimen/margin_24dp"
        app:riv_oval="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/full_names"
                android:textColor="@color/draw_head"
                android:textStyle="bold"
                android:layout_margin="2.5dp"
                android:textSize="@dimen/txt_16sp"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/first_names"
                android:layout_margin="@dimen/margin_2dp"
                android:textSize="@dimen/txt_16sp"
                android:textColor="@color/draw_description"
                android:layout_toEndOf="@id/name"/>

            <TextView
                android:id="@+id/dotSep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dot"
                android:textAlignment="center"
                android:layout_margin="@dimen/margin_2dp"
                android:textSize="@dimen/txt_16sp"
                android:textColor="@color/draw_description"
                android:layout_toEndOf="@id/handle"/>

            <TextView
                android:id="@+id/min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sample_time"
                android:layout_margin="@dimen/margin_2dp"
                android:textSize="15sp"
                android:textColor="@color/draw_description"
                android:layout_toEndOf="@id/dotSep"/>

            <!--<TextView-->
                <!--android:id="@+id/dropDown"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="{down}"-->
                <!--android:textAlignment="center"-->
                <!--android:layout_marginEnd="@dimen/margin_8dp"-->
                <!--android:layout_marginTop="@dimen/margin_2dp"-->
                <!--android:textSize="@dimen/txt_16sp"-->
                <!--android:textColor="@color/draw_description"-->
                <!--android:layout_alignParentEnd="true"/>-->

        </RelativeLayout>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:background="@drawable/bg_content_tweet"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginStart="@dimen/margin_2dp"
            android:textColor="@color/draw_head"
            tools:text="@tools:sample/lorem"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:textSize="@dimen/txt_16sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_4dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_28dp"
                    android:src="@drawable/ic_comment"/>

                <TextView
                    android:id="@+id/txtComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:textColor="@color/draw_description"
                    android:text="@string/label_sample_reply"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_4dp"
                android:gravity="end|center_vertical">

                <ImageView
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_28dp"
                    android:src="@drawable/ic_like"/>

                <TextView
                    android:id="@+id/txtLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/draw_description"
                    android:text="@string/label_sample_reply"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>